Changes: - Reworked text to reflect last year developments

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
                     </div>
                     <div class="col-md-6 column-right">
                         <h2>Who am I?</h2>
-                        <p1>Greetings, I'm Robert Dams, a Software Engineer driven by a deep appreciation for technology and the dynamic interplay of human interaction with it. Throughout my academic journey, I thrived on exploration and continuous learning. Whether it was mastering programming languages such as C#, Java, and C++, or embracing development methodologies like Test Driven Development and Scrum, my educational path at Fontys Hogescholen provided the perfect backdrop for this intellectual adventure.<br><br>
-                            This relentless pursuit of knowledge has bestowed upon me a resolute can-do attitude and a fervor for embracing fresh challenges. I bring to the table a mindset rooted in positivity and an unwavering determination to surmount obstacles. Growing up in an environment teeming with engineers and inventors, I've come to relish the sense of fulfillment and pride that accompanies transforming a vision or concept into tangible reality through the art of software development.<br><br>
-                            Throughout my career, I've confronted a wide array of challenges. In my formative years as a consultant, I honed my ability to swiftly adapt to varying company cultures. This entailed not only adapting but also mastering the art of effective communication with clients, ensuring precise roadmaps and keeping them well-informed about my progress. In this consultant role, I often navigated these challenges independently, necessitating proficient leadership and guidance of fellow software developers during transitional phases within each organization.</p1>
+                        <p1>Hi, I’m Robert Dams — a <b>Software Engineer</b> and <b>Scrum Master</b> based in the Brainport Eindhoven region. I’m passionate about technology and how people interact with it, always driven by curiosity and a love for learning. Over the years, I’ve worked with a range of technologies including <b>C#</b>, <b>Blazor</b>, <b>React</b>, <b>Azure</b>, <b>GitHub Enterprise</b> (GHE), <b>Java</b>, and <b>C++</b>. I enjoy applying <b>Agile</b> and <b>Scrum</b> principles in my work, along with <b>Test Driven Development</b>, to build reliable, scalable, and user-focused software solutions.<br><br>
+                            I’m driven by a can-do attitude and a love for tackling new challenges. I approach every project with a positive mindset and the determination to see things through. Coming from a family of engineers and inventors, I’ve always enjoyed turning ideas into real, working solutions through software.<br><br>
+                            In my career, I’ve faced all kinds of challenges that helped shape who I am as a developer. My early years as a consultant taught me how to quickly adapt to different company cultures, communicate clearly with clients, and manage expectations through well-defined plans and regular updates. Often working independently, I also took on leadership roles — guiding teams and helping other developers navigate transitions within their projects.<br><br>
+                            Over the past year, I’ve strengthened these skills by earning my <b>Professional Scrum Master I (PSM I)</b> certification from Scrum.org and taking on a hybrid role as both Software Engineer and Scrum Master for my team. This experience has deepened my understanding of Agile practices and <b>scalable software development</b>.</p1>
                     </div>
                 </div>
             </div>
@@ -83,7 +84,7 @@
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/2963864-200.png" class="img-fluid" alt="Development Operations">
                         <h2>Development Operations</h2>
-                        <p1>DevOps is ingrained in my work approach. I possess extensive experience in Azure and Google Cloud, complemented by proficiency in code analysis tools like Jenkins and SonarQube.</p1>
+                        <p1>DevOps is ingrained in my work approach. I possess extensive experience in Azure and Github Enterprise, complemented by proficiency in code analysis tools like Jenkins and SonarQube.</p1>
                     </div>
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/3190682-200.png" class="img-fluid" alt="Webdesign">
@@ -98,7 +99,7 @@
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/1854505-200.png" class="img-fluid" alt="Project Management">
                         <h2>Project management</h2>
-                        <p1>I've assumed the role of project leader on numerous occasions, consistently delivering projects on time. Collaborating with me guarantees efficient and timely communication, along with a proactive, solution-oriented approach to challenges.</p1>
+                        <p1>I’ve taken on the role of project leader multiple times and, in recent years, have served as Scrum Master for my team — consistently delivering projects on time and to a high standard. Working with me means clear, efficient communication and a proactive, solution-oriented mindset focused on achieving results.</p1>
                     </div>
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/2199735-200.png" class="img-fluid" alt="Software Quality Assurance">
@@ -266,7 +267,7 @@
         
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2023 Copyright:
+            © 2025 Copyright:
             <a class="text-white" href="https://www.linkedin.com/in/robert-dams/">Robert Dams</a>
             </div>
         </footer>
