Changes: - Fixed some small mistakes - Started work on new iSuite page

--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
             <div class="container projectContainer">
                 <div class="row">
                     <div class="col-md-4 projectColumn"> 
+                        <a class="projectText" href="projects/isuite.html">
+                            <h1>iSuite</h1>
+                            <p1>Played a key role as Software Engineer and Scrum Master in the grassroots development of PinkRoccade’s new iSuite enterprise solution.</p1>
+                            <div class="projectPillContainer">
+                                <span class="badge badge-pill badge-primary projectPill">C#</span>
+                                <span class="badge badge-pill badge-primary projectPill">Blazor</span>
+                                <span class="badge badge-pill badge-primary projectPill">Azure</span>
+                                <span class="badge badge-pill badge-primary projectPill">GHE</span>
+                                <span class="badge badge-pill badge-primary projectPill">Docker</span>
+                            </div>
+                        </a>                    
+                    </div>
+                    <div class="col-md-4 projectColumn"> 
                         <a class="projectText" href="projects/baxter.html">
                             <h1>Baxter FDS-II</h1>
                             <p1>Consultancy assignment focused on redesigning FDS-II infrastructure and supporting refactoring of legacy code.</p1>
