--- a/projects/isuite.html
+++ b/projects/isuite.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" title="FDS-II at Baxter">
-  <title>FDS-II at Baxter</title>
+<html lang="en" title="iSuite at PinkRoccade">
+  <title>iSuite at PinkRoccade</title>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -35,9 +35,9 @@
   <body>
     <div class="titlecard">
       <div class="titlecard-content">
-        <h1 class="titlecard-title">FDS-II</h1>
-        <h2 class="titlecard-subtitle">Consultancy assignment at Baxter</h2>
-        <p1 class="titlecard-date">05/2023 - 02/2024</p1>
+        <h1 class="titlecard-title">iSuite</h1>
+        <h2 class="titlecard-subtitle">Software engineer and Scrum master at PinkRoccade</h2>
+        <p1 class="titlecard-date">02/2024 - Present</p1>
       </div>
     </div>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark navbarCustom">
@@ -82,9 +82,10 @@
               </div>
               <div class="col-md-6 column-right">
                   <h2>Company</h2>
-                  <p1>Baxter is a renowned multinational healthcare company known for its contributions in the field of medical products, including innovative treatments, pharmaceuticals, and advanced medical technologies. With a focus on improving patient care and enhancing medical outcomes, Baxter has established itself as a key player in the global healthcare industry.</p1>
+                    <p1>PinkRoccade is a leading IT service provider specializing in innovative software solutions for public sector organizations across the Netherlands. With a strong commitment to digital transformation, PinkRoccade supports clients in improving efficiency, transparency, and citizen services through tailored technology.<br><br>
+                        PinkRoccade Local Government focuses specifically on delivering software and IT services to municipalities and local authorities, helping them streamline administrative processes and enhance public service delivery with reliable, scalable solutions designed for the unique needs of local governments.</p1>
                   <h2>Product</h2>
-                  <p1>Baxter specializes in a diverse range of medical products and therapies, including intravenous (IV) solutions, infusion systems, renal and hospital products, nutritional therapies, and pharmaceuticals. Their product line caters to various medical needs, such as critical care, infectious diseases, hemophilia, and immune disorders, contributing to the advancement of healthcare practices worldwide.</p1>
+                    <p1>iSuite, also known as Sociaal Portaal, is PinkRoccade Local Government’s advanced software platform designed to support municipalities in managing social services and welfare programs. The solution offers a fully integrated environment for case management, client registration, and process automation, enabling local governments to efficiently handle complex social care workflows. With built-in tools for data analysis, reporting, and citizen communication, iSuite helps improve transparency, compliance, and the overall quality of social service delivery, empowering municipalities to better meet the needs of their communities.</p1>
               </div>
           </div>
       </div>
